[package]
name = "PlaceButForDiscord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full", "macros", "rt"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"], version = "0.11.6" }
lazy_mut = { version = "0.1.0", features = [] }
substring = { version = "1.4.5", features = [] }
image = { version = "0.24.2", features = [] }
